# hawki-toolkit-file-converter

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  dev_server.py  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.yml  main.py  models.py  process_pdfs.py  pyproject.toml  rabbit_readme.md  readme.md  run.sh  task.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/.release/: README.md  create-release.js  detect-version.js  package-lock.json  package.json  send-discord-notification.js
.github/actions/setup-release-environment/: action.yml
.github/workflows/: create-release-branch.yml  publish-dockerimage.yml  publish-version.yml  trigger-release.yml
_changelog/: 1.0.0.md  1.1.0.md  1.2.0.md  2.0.0-upgrade.md  2.0.0.md  3.0.0-upgrade.md  3.0.0.md  3.0.1.md  README.md  next-upgrade.md  next.md
common/: pipeline_events.py
docker/custom/entrypoint/: 005-disable-postgres.sh  010-init-temporal-db.sh
docker/custom/nginx/: 50-prefect-ui.conf  50-temporal-ui.conf
docker/custom/supervisor/conf.d/: 10-postgres.conf  prefect-server.conf  (+4 more)
docker/scripts/: fetch_models.py  start-prefect-server.sh  start-temporal-server.sh  start-temporal-ui.sh
rabbitmq/: client.py  settings.py  topology.py
tests/: conftest.py  test_callback.py  test_chunking.py  test_cleanup_schedule.py  test_convert.py  test_doc.py  test_download.py  test_empty_pages.py  test_errors.py  test_existing_converter_compat.py  test_extract.py  test_file_conversion_worker.py  test_image.py  test_jobs.py  test_path_safety.py  test_pdf.py  test_pipeline_events.py  test_root.py  test_text.py  test_topology.py
tests/test_utils/: test_accumulate_chunks.py  test_chunked_content_iter.py  test_sanitize_filename.py
tests/testdata/: .~lock.same_origin_export_to_pdf_and_doc.docx#  content_on_page_1_of_3.docx  content_on_page_2_of_3.docx  content_on_page_3_of_3.docx  foo.docx  same_origin_export_to_pdf_and_doc.docx  test.doc  test_nodes.md
utils/: cli.py  helper.py  logging_helper.py  pdf_processor.py  processor.py  word_processor.py
workers/: failure_classifier.py  file_conversion_worker.py
(+2 files in other folders)
