[project]
name = "hawki-toolkit-file-converter"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi~=0.136.0",
    "kreuzberg==4.9.2",
    "pillow>=12.2.0",
    "prefect>=3.7.2",
    "pydantic~=2.13.1",
    "python-multipart~=0.0.26",
    "pyyaml>=6.0.3",
    "uvicorn~=0.44.0",
]

[project.scripts]
dev = "utils.cli:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
