[project]
name = "hawki-toolkit-file-converter"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "asyncpg~=0.31.0",
    "charset-normalizer~=3.4.7",
    "fastapi~=0.136.0",
    "httpx~=0.28.1",
    "kreuzberg==4.9.2",
    "pillow~=12.2.0",
    "temporalio~=1.9",
    "pydantic~=2.13.1",
    "python-multipart~=0.0.26",
    "pyyaml~=6.0.3",
    "uvicorn~=0.44.0",
]

[project.scripts]
dev = "utils.cli:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "requests~=2.33.1",
    "ruff~=0.13.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["docker"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["utils"]

[tool.ruff.format]
quote-style = "double"
